--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit optio id vero amet, alias architecto consectetur error eum eaque sit.</p>
+                        <p class="skills__text"></p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 
